# LPVL

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
include/LPVL/: ChartBase  Enums  GLGeometry  Line2D  LinePlot  List  Logging  Math  Point1D  Point2D  Polygon  RealtimeLinePlot  Rectangle  SGMaterials  Shapes2D  Triangle  ValueMesh
include/LPVL/Abstract/: IColorable  INameable
libs/CTRE/: CMakeLists.txt
libs/CTRE/include/CTRE/: CTRE
src/c++/abstract/: icolorable.h  inameable.h
src/c++/geometry/: point1d.h  point2d.h
src/c++/utils/: logging.h  mathf.h
src/collections/: lpvllist.h
src/geometry/: lpvlglnodegeometry.c++  lpvlglnodegeometry.h  lpvlglvertex.h  lpvlline2d.c++  lpvlline2d.h  lpvlpoint2d.c++  lpvlpoint2d.h  lpvlpolygon.c++  lpvlpolygon.h  lpvlrectangle.c++  lpvlrectangle.h  lpvltriangle.c++  lpvltriangle.h
src/global/: lpvlenums.h  lpvlglobal.h  lpvlmath.c++  lpvlregister.c++
src/quick/: lpvlchartbase.c++  lpvlchartbase.h  lpvllineplot.c++  lpvllineplot.h  lpvlmaterials.c++  lpvlmaterials.h  lpvlmatrixplot.c++  lpvlmatrixplot.h  lpvlrealtimelineplot.c++  lpvlrealtimelineplot.h  lpvlvaluemesh.c++  lpvlvaluemesh.h  lpvlvaluemesh.h.mMhkeq  lpvlxyplot.c++  lpvlxyplot.h
src/utils/: lpvlcrypto.c++  lpvlcrypto.h
