cmake_minimum_required (VERSION 3.15)
project(CTRE LANGUAGES CXX)
if(TARGET ${PROJECT_NAME})
  return()
endif()
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(include src)
file(GLOB_RECURSE CTRE_CORE src/*)
file(GLOB_RECURSE CTRE_CORE_INCLUDE include/*)
set(SRC ${CTRE_CORE} ${CTRE_CORE_INCLUDE})
add_library(${PROJECT_NAME} ${SRC})
target_include_directories(${PROJECT_NAME} PUBLIC include src)
